fixing buttons on mobile

--- a/assets/styles/theme/_theme.scss
+++ b/assets/styles/theme/_theme.scss
@@ -3123,8 +3123,6 @@ screen and (max-height: 300px) {
     .wp-block-buttons>.wp-block-button.wp-block-button__width-50 {
         width: calc(50% - .4em);
         max-width: calc(50% - .4em);
-        margin-right: 0;
-        margin: 0 .2em .4em .2em;
     }
 
     .wp-block-buttons>.wp-block-button.wp-block-button__width-75:last-child,
@@ -3133,8 +3131,6 @@ screen and (max-height: 300px) {
     .wp-block-buttons>.wp-block-button.wp-block-button__width-100 {
         width: calc(100% - .4em);
         max-width: calc(100% - .4em);
-        margin-right: 0;
-        margin: 0 .2em .4em .2em;
     }
 }
 
